# pandora_paper_roc

./: .gitignore  .gitmodules  CMakeLists.txt  Intro_outline  Pipfile  README.md  Results_outline  Snakefile  TODO  TODO.txt  config.filters.yaml  config.pandora_filters.pandora_paper_tag1.yaml  config.pandora_paper_tag1.4_way_new_basecall.yaml  config.pandora_paper_tag1.4_way_old_basecall.yaml  config.pandora_paper_tag1.4_way_pandora_filters.illumina.yaml  config.pandora_paper_tag1.4_way_pandora_filters.yaml  config.pandora_paper_tag1.filters.yaml  config.pandora_paper_tag1.illumina.filters.yaml  config.pandora_paper_tag1.illumina.yaml  config.pandora_paper_tag1.nanopore.filters.yaml  config.pandora_paper_tag1.nanopore.yaml  config.pandora_paper_tag1.no_nanopolish.yaml  config.pandora_paper_tag1.yaml  config.yaml  outline.md  outline_draft  outline_draft.md  requirements.txt
cpp/tests/: CMakeLists.txt  test_Pangenome_SNPs.cpp  test_Pangenome_SNPs_helper.h  test_Positioned_SNPs.py
tests/: CMakeLists.txt  common.py  test_Pangenome_SNPs.cpp  test_Positioned_SNPs.py  test_aligned_pairs.py  test_bwa.py  test_calculator.py  test_classification.py  test_classifier.py  test_cli.py  test_coverage_filter.py  test_deduplicate_pairwise_snps.py  test_evaluate.py  test_evaluation.py  test_filter.py  test_filtered_vcf_file.py  test_fix_medaka_vcf.py  test_fix_nanopolish_vcf.py  test_fix_pandora_vcf.py  test_fix_samtools_vcf.py  test_fix_snippy_vcf.py  test_gaps_filter.py  test_mapq_sam_records_filter.py  test_masker.py  test_medaka_vcf.py  test_mummer.py  test_nanopolish_vcf.py  test_pandora_vcf.py  test_probe.py  test_query.py  test_recall.py  test_report.py  test_reporter.py  test_samtools_vcf.py  test_snippy_vcf.py  test_strand_bias_filter.py  test_unique_sam_records_filter.py  test_utils.py  test_vcf.py  test_vcf_file.py  (+1 more)
tests/test_cases/: make_probes_6.vcf  out.delta  out.snps  (+17 more)
(+265 files in other folders)
